--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -3,6 +3,7 @@ FROM	debian:buster
 RUN		apt-get update && apt-get -y upgrade; \
 		apt-get -y install mariadb-server \
 		vim
+COPY	./conf/run.sh ./
 
 EXPOSE	3306
 
