--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -1,4 +1,11 @@
-MYSQL_ROOT_PASSWORD:1234
-MYSQL_DATABASAE:root
+# wordpress_setting
+WORDPRESS_DB_HOST:mariadb
+WORDPRESS_DB_USER:yeslee
+WORDPRESS_DB_PASSWORD:1234
+WORDPRESS_DB_NAME:wordpress
+
+# mysql_setting
+MYSQL_DATABASAE:wordpress
 MYSQL_USER:yeslee
-MYSQL_PASSWORD:0406
+MYSQL_PASSWORD:1234
+MYSQL_ROOT_PASSWORD:1234
