--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -23,15 +23,15 @@ services:                           # define service lists
       build: requirements/wordpress
       container_name: wordpress
       restart: always
-      ports:
-          - 9000
+      expose:
+          - "9000"
       networks:
           - inception_network
       environment:
-          - WORDPRESS_DB_HOST=$${WORDPRESS_DB_HOST}
-          - WORDPRESS_DB_USER=$${WORDPRESS_DB_USER}
-          - WORDPRESS_DB_PASSWORD=$${WORDPRESS_DB_PASSWORD}
-          - WORDPRESS_DB_NAME=$${WORDPRESS_DB_NAME}
+          - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
+          - WORDPRESS_DB_USER=${WORDPRESS_DB_USER}
+          - WORDPRESS_DB_PASSWORD=${WORDPRESS_DB_PASSWORD}
+          - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
       volumes:
           - wp-data:/var/www/html # nginx 소개 페이지 위치
       depends_on:
@@ -42,15 +42,15 @@ services:                           # define service lists
       build: requirements/mariadb
       container_name: mariadb
       restart: always
-      ports:
-          - 3306
+      expose:
+          - "3306"
       networks:
           - inception_network
       environment:
-          - MYSQL_DATABASE=$${MYSQL_DATABSE}
-          - MYSQL_USER=$${MYSQL_USER}
-          - MYSQL_PASSWORD=$${MYSQL_PASSWORD}
-          - MYSQL_ROOT_PASSWORD=$${MYSQL_ROOT_PASSWORD}
+          - MYSQL_DATABASE=${MYSQL_DATABASE}
+          - MYSQL_USER=${MYSQL_USER}
+          - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+          - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       volumes:
           - db-data:/var/lib/mysql # named_volume_name : /container/path
   
