--- a/inception/srcs/requirements/wordpress/conf/www.conf
+++ b/inception/srcs/requirements/wordpress/conf/www.conf
@@ -35,7 +35,7 @@ group = www-data
 ; Note: This value is mandatory.
 
 ; listen connect fastcgi_pass
-listen = wordpress:9000
+listen = 0.0.0.0:9000
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
@@ -396,7 +396,7 @@ pm.max_spare_servers = 3
 ; Setting to "no" will make all environment variables available to PHP code
 ; via getenv(), $_ENV and $_SERVER.
 ; Default Value: yes
-;clear_env = no
+clear_env = no
 
 ; Limits the extensions of the main script FPM will allow to parse. This can
 ; prevent configuration mistakes on the web server side. You should only limit
@@ -414,6 +414,10 @@ pm.max_spare_servers = 3
 ;env[TMP] = /tmp
 ;env[TMPDIR] = /tmp
 ;env[TEMP] = /tmp
+env[WORDPRESS_DB_HOST] = $WORDPRESS_DB_HOST
+env[WORDPRESS_DB_PASSWORD] = $WORDPRESS_DB_PASSWORD
+env[WORDPRESS_DB_USER] = $WORDPRESS_DB_USER
+env[WORDPRESS_DB_NAME] = $WORDPRESS_DB_NAME
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
@@ -439,3 +443,4 @@ pm.max_spare_servers = 3
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+access.log = /dev/stderr
