--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -60,12 +60,12 @@ volumes:
     db-data:
         driver_opts:
             type: none
-            device: /Users/yeslee/volume-test/db
+            device: /Users/yeslee/data/db
             o: bind
     wp-data:
         driver_opts:
             type: none
-            device: /Users/yeslee/volume-test/wp
+            device: /Users/yeslee/data/wp
             o: bind
 
 networks:
