Add case 'cmd is not exists'

--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -1,5 +1,4 @@
 NAME = pipex
-NAME_BONUS = pipex_bonus
 
 HEADER = -I ./headers
 
@@ -15,15 +14,10 @@ RMFLAGS = -f
 SRCS = ./srcs/pipex.c \
 	   ./srcs/set_cmd.c \
 	   ./srcs/print_error.c \
-	   ./srcs/redirect.c
-
-SRCS_BONUS = ./srcs/set_cmd.c \
-			 ./srcs/print_error.c \
-			 ./srcs/pipex_bonus.c \
-			 ./srcs/redirect.c
+	   ./srcs/redirect.c \
+	   ./srcs/run.c
 
 OBJS = $(SRCS:.c=.o)
-OBJS_BONUS = $(SRCS_BONUS:.c=.o)
 
 all : $(NAME)
 
@@ -32,22 +26,15 @@ $(NAME) : $(OBJS)
 	@cp $(LIBFT)/$(LIBFT_NAME) $(LIBFT_NAME)
 	$(CC) $(CFLAGES) -L. -lft $(LFLAGES) $(LIBS) -o $@ $^
 
-bonus : $(NAME_BONUS)
-
-$(NAME_BONUS) : $(OBJS_BONUS)
-	@make all -C $(LIBFT)
-	@cp $(LIBFT)/$(LIBFT_NAME) $(LIBFT_NAME)
-	$(CC) $(CFLAGES)  -L. -lft $(LFLAGES) $(LIBS) -o $@ $^
-
 %.o:%.c
 	@$(CC) $(CFLAGES) $(HEADER) -o $@ -c $<	
 
 clean :
-	$(RM) $(RMFLAGS) $(OBJS) $(OBJS_BONUS)
+	$(RM) $(RMFLAGS) $(OBJS)
 	 make clean -C $(LIBFT)
 
 fclean : clean
-	$(RM) $(RMFLAGS) $(NAME) $(NAME_BONUS)
+	$(RM) $(RMFLAGS) $(NAME)
 	$(RM) $(RMFLAGS) ./libft.a
 	@make fclean -C $(LIBFT)
 
