[Add] = in do.c

--- a/philosopher/Makefile
+++ b/philosopher/Makefile
@@ -3,7 +3,7 @@ NAME = philo
 HEADER = -I ./include
 
 CC = gcc
-CFLAGES = -Wall -Wextra -Werror
+CFLAGES = -Wall -Wextra -Werror -g
 FFLAGES = -g3 -fsanitize=address
 PFLAGES = -pthread
 
