--- a/cpp_module_00/ex01/Makefile
+++ b/cpp_module_00/ex01/Makefile
@@ -1,31 +1,33 @@
 NAME = phonebook
-HEADER = phonebook.hpp
 
-CC = clang++
-#-STD = c++98
+HEADER = contact.hpp \
+		phonebook.hpp
+
+CC = clang++ -std=c++98
 CFLAGES = -Wall -Wextra -Werror 
 
 RM = rm
 RMFLAGS = -f
 
 SRC = main.cpp \
-		phonebook.cpp
+	contact.cpp \
+	phonebook.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
 all : $(NAME)
 
 $(NAME) : $(OBJ)
-	$(CC) $(-STD) $(CFLAGES) -o $@ $^
+	@$(CC) $(CFLAGES) -o $@ $^
 
 %.o:%.c
-	$(CC) $(-STD) $(CFLAGES) $(HEADER) -o $@ -c $<
+	@$(CC) $(CFLAGES) $(HEADER) -o $@ -c $<
 
 clean :
-	$(RM) $(RMFLAGS) $(OBJ)
+	@$(RM) $(RMFLAGS) $(OBJ)
 
 fclean : clean
-	$(RM) $(RMFLAGS) $(NAME)
+	@$(RM) $(RMFLAGS) $(NAME)
 
 re : fclean all
 
